# reservation

./: .env
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs
migrations/: 20221115092127_init.up.sql  20221115093003_reservation_trigger.up.sql  20221115094951_reservation_func.down.sql  20221115094951_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
rfcs/: 001-core-reservation.md
